2004-01-12  Paolo Maggi  <paolo.maggi@polito.it> 

	Implemented async loading of remote files.

	New Close All dialog (thanks to Paolo Borelli for his
	help)

	HIG-fication of the revert dialog (thanks to Paolo Borelli 
	for his	help)

	This is a very big patch and I'm too lazy to fill a more
	detaild ChangeLog entry.

	Modified files:
	
	* bonobo-mdi.c
	* bonobo-mdi.h
	* gedit-commands.c
	* gedit-document.c
	* gedit-document.h
	* gedit-file.c
	* gedit-file.h
	* gedit-marshal.list
	* gedit-mdi-child.c
	* gedit-mdi-child.h
	* gedit-mdi.c
	* gedit-mdi.h
	* gedit-session.c
	* gedit-ui.xml
	* gedit-utils.c
	* gedit-utils.h
	* gedit-view.c
	* gedit-window-server.c
	* gedit2.c
	* dialogs/Makefile.am
	
	New files:
	* dialogs/gedit-close-confirmation-dialog.c
	* dialogs/gedit-close-confirmation-dialog.h
	* dialogs/close_all_dialog.glade2


	
2004-01-06  Paolo Borelli  <pborelli@katamail.com>

	* gedit-mdi.c: factor out gedit_document_get_deleted.

	* gedit-document.[ch]: see above.

2004-01-05  Paolo Borelli  <pborelli@katamail.com>

	* plugins/docinfo/docinfo.c: remove separator and use
	gedit_warning where appropriate.

	* plugins/shell_output/shell_output.c: ditto.

	* plugins/sort/sort.c: ditto.

	* plugins/time/time.c: ditto.

	* plugins/time/time.glade2: remove separator.

	* plugins/sort/sort.glade2: ditto.

	* plugins/spell/languages-dialog.glade2: ditto.

2004-01-03  Anders Carlsson  <andersca@gnome.org>

	* gedit-mdi-child.c: (gedit_mdi_child_set_label):
	Don't use EelInputEventBox, use gtk+ instead.
	
2004-01-02  Paolo Borelli  <pborelli@katamail.com>

	* gedit-utils.[ch]: remove gedit_button_new_with_stock_image
	since eel has an analougus function, modify gedit_warning to
	take a format, define common error strings MISSING_FILE and
	MISSING_WIDGETS.

	* dialogs/gedit-dialog-goto-line.c: remove separator and use
	gedit_warning and gedit_dialogs_add_button where appropriate.

	* dialogs/gedit-dialog-replace.c: ditto.

	* dialogs/gedit-dialog-uri.c: ditto.
