@@ -1,3 +1,10 @@
+2004-01-12  Paolo Borelli  <pborelli@katamail.com>
+
+	* gedit/bonobo-mdi.c: handle don't start drag&drop when
+	double-clicking on a tab (fixes 129994).
+
+	* gedit/gedit-file.c: fix a compilation warning.
+
 2004-01-12  Paolo Maggi  <paolo.maggi@polito.it> 
 
 	Implemented async loading of remote files.
